Cross_stack/cross_stack(sg).yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Security group stack
          

Parameters:
  VPCID:
    Type: String
  

Resources:
  
  
  ############### secuirty ################# 
  sshsecurity:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: allow ssh
      GroupName: ssh-security
      VpcId:
        !Ref VPCID
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0

      Tags:
        - Key: Name
          Value: CFN-SSHSG
        - Key: stack
          Value: !Ref AWS::StackName  
  EXLBsecurity:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: allow http and https
      GroupName: EXLB-security
      VpcId:
        !Ref VPCID
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0

      - IpProtocol: tcp
        FromPort: 443 
        ToPort: 443
        CidrIp: 0.0.0.0/0

      Tags:
        - Key: Name
          Value: CFN-EXLBSG
        - Key: stack
          Value: !Ref AWS::StackName 

  InLBsecurity:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: allow http port 8080
      GroupName: InLB-security
      VpcId:
        !Ref VPCID
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        SourceSecurityGroupId: !Ref websecurity

      Tags:
        - Key: Name
          Value: CFN-INLBSG
        - Key: stack
          Value: !Ref AWS::StackName

  websecurity:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: allow http and ssh
      GroupName:  web-security
      VpcId:
        !Ref VPCID
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        SourceSecurityGroupId: !Ref EXLBsecurity
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        SourceSecurityGroupId: !Ref sshsecurity
      Tags:
        - Key: Name
          Value: CFN-WEBSG
        - Key: stack
          Value: !Ref AWS::StackName
  
  WASsecurity:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: allow 8080
      GroupName:  was-security
      VpcId:
        !Ref VPCID
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        SourceSecurityGroupId: !Ref InLBsecurity
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        SourceSecurityGroupId: !Ref sshsecurity
      Tags:
        - Key: Name
          Value: CFN-WASSG
        - Key: stack
          Value: !Ref AWS::StackName

  DBaccess:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: allow webserver
      GroupName: DBSG
      VpcId: !Ref VPCID
      SecurityGroupIngress:
      - IpProtocol: TCP
        FromPort: 3306
        ToPort: 3306
        SourceSecurityGroupId: !Ref WASsecurity
      Tags:
        - Key: Name
          Value: CFN-DBSG
        - Key: stack
          Value: !Ref AWS::StackName
         

Outputs:
  websecurity:
    Value: !Ref websecurity 
  wassecurity:
    Value: !Ref WASsecurity 
  DBsecurity:
    Value: !Ref DBaccess
  sshsecurity:
    Value: !Ref sshsecurity              
  EXLBsecurity:
    Value: !Ref EXLBsecurity
  InLBsecurity:
    Value: !Ref InLBsecurity
